<resources>
    <string name="app_name">ShopApp</string>
    <string name="back_arrow">BACK_ARROW</string>
    <string name="mixed_fruit_pancakes_recipe">Mixed Fruit Pancakes \n Recipe</string>
    <string name="recipe_img">recipe_img</string>
    <string name="cooking_time_title">Cooking Time</string>
    <string name="cooking_time">20 min</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="difficulty">Medium</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients">12</string>
    <string name="per_serving_title">Per serving</string>
    <string name="per_serving">200 g</string>
    <string name="shopping_list">SHOPPING LIST</string>
    <string name="like">like</string>
    <string name="_342">342</string>
    <string name="buttonPink">buttonPink</string>
    <string name="_220">220</string>
    <string name="chicken_tikka_masala">Chicken Tikka Masala</string>
    <string name="popular_recipe">Popular Recipe</string>
    <string name="blueberry">blueberry</string>
    <string name="swordfish_steaks">Swordfish Steaks</string>
    <string name="avocado_salad">avocado salad</string>
    <string name="if_there_s_one_dish_guaranteed_to_be_on">If there\'s one dish guaranteed to be on...</string>
    <string name="dinner">dinner</string>
    <string name="cacio_e_pepe_pasta">Cacio e Pepe Pasta</string>
    <string name="prepare_grill_for_medium_high_heat_oil">Prepare grill for medium-high heat oil...</string>
    <string name="if_one_pasta_dish_exemplifie_the_comp">If one pasta dish exemplifie the comp...</string>
    <string name="_156">156</string>
    <string name="italian_food">italian food</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="chinese_recipe">chinese recipe</string>
    <string name="breakfast">breakfast</string>
</resources>
