<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/mixed_fruit_pancakes_recipe"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/recipe_img"
        android:layout_width="257dp"
        android:layout_height="317dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/recipe_img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/recipe_img" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="309dp"
        android:layout_height="166dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/timeBg"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="#aaa"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/difficultyBg"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card">

        <android.support.v7.widget.CardView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp" >

            <android.support.v7.widget.CardView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="top"
                    android:text="@string/cooking_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />

                <TextView
                    android:id="@+id/timeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/cooking_time_title"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />
            </android.support.v7.widget.CardView>

        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/difficultyBg"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:cardBackgroundColor="#aaa"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card">

        <android.support.v7.widget.CardView
            android:id="@+id/difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp" >

            <android.support.v7.widget.CardView
                android:id="@+id/difficultyText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/difficultyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="top"
                    android:text="@string/difficulty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />

                <TextView
                    android:id="@+id/difficultyTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/difficulty_title"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ingredientsBg"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="#aaa"
        app:layout_constraintEnd_toStartOf="@+id/per_servingBg"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/timeBg"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.CardView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp" >

            <android.support.v7.widget.CardView
                android:id="@+id/ingredientsText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="top"
                    android:text="@string/ingredients"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />

                <TextView
                    android:id="@+id/ingredientsTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/ingredients_title"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/per_servingBg"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:cardBackgroundColor="#aaa"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/difficultyBg" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp" >

            <android.support.v7.widget.CardView
                android:id="@+id/per_servingText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/per_servingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="top"
                    android:text="@string/per_serving"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />

                <TextView
                    android:id="@+id/per_servingTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/per_serving_title"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_green"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/shopping_list"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="54dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/btn_round_rect_pink"
        android:contentDescription="@string/buttonPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_img" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="16dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/like"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_like"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <TextView
        android:id="@+id/likesNumber"
        android:layout_width="25dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_342"
        android:textColor="#FFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>